# music-tagger

./: .gitignore  LICENSE  README.md
music-tagger/: README.md  pyproject.toml
music-tagger/src/music_tagger/: __init__.py  __main__.py  cli.py  scanner.py  tags.py
music_tagger/: main.py  pyproject.toml
